[package]
name = "mike"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
memchr = "2.7.6"
tokio = { version = "1.48.0", features = ["full", "net"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }

[profile.release]
opt-level = 3

[profile.dev]
debug = false
opt-level = 3

